Création de frontend et backend basiques pour tester la database.
Pour l'instant on peut upload une image et l'annoter manuellement

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ __pycache__/
 
 # Conda environments
 .env
-.env.*
+.envexample
 .conda/
 *.conda
 *.env
@@ -33,7 +33,7 @@ instance/
 *.bak
 
 # Uploads / generated data
-uploads/
+app/static/uploads/
 data/
 *.jpg
 *.png
@@ -51,3 +51,4 @@ build/
 dist/
 *.egg
 .eggs/
+
