--- a/.envexample
+++ b/.envexample
@@ -1,3 +1,3 @@
 FLASK_ENV=development
 SECRET_KEY=some-secret-key
-DATABASE_URL=postgresql://postgres:password@localhost:5432/wdp_db
+DATABASE_URL=postgresql://wdp_user:wdp_pass@localhost:5432/wdp_db
