--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-flask==3.1.0
-werkzeug==3.1.3
-pillow==11.1.0
-python-dotenv==1.1.0
-sqlalchemy==2.0.39
-flask-sqlalchemy==3.1.1
-joblib==1.4.2
-psycopg2==2.9.10
-opencv-python==4.11.0.86
-numpy==2.3.0
-geopy==2.4.1
-click==8.1.8
-flask-wtf==1.2.2
+flask
+flask-wtf
+werkzeug
+sqlalchemy
+flask-sqlalchemy
+python-dotenv
+click
+pillow
+geopy
+opencv-python
+numpy
+ultralytics
+psycopg2
+joblib
